# Zahlengerade

./: .gitignore  Backlog.org  Interface.hs  LICENSE  README.org  Zahlengerade.bat  Zahlengerade.cabal  Zahlengerade.hs  default.nix  dist.sh  example-input  example-input.yaml  input-file  shell.nix  stack.yaml  zahlengerade.bat  zahlengerade.cabal
app/: Main.hs
docs/: README.org
src/: Zahlengerade.hs
