name:                Zahlengerade
version:             0.1.0.0
synopsis:            Simple library for rendering number lines using the
                     <http://projects.haskell.org/diagrams/ diagrams> library.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              David Pätzel
maintainer:          david.a.paetzel@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Zahlengerade
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    NoMonomorphismRestriction
  build-depends:       base >=4.9 && <4.10, diagrams-lib >=1.3 && <1.4, diagrams-svg >=1.4 && <1.5, regex-pcre >=0.94 && <0.95
  -- hs-source-dirs:      
  default-language:    Haskell2010
