name:                zahlengerade
version:             0.1.0.0
synopsis:            Simple library for rendering number lines using the <http://projects.haskell.org/diagrams/ diagrams> library.
description:         Please see README.md
homepage:            https://github.com/dpaetzel/zahlengerade#readme
license:             GPL-3
license-file:        LICENSE
author:              David Pätzel
maintainer:          david.a.paetzel@gmail.com
copyright:           Copyright (c): 2016 David Pätzel
category:            Image
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Zahlengerade
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-svg
                     , regex-compat
  default-language:    Haskell2010

executable zahlengerade-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , cli
                     , diagrams-svg
                     , yaml
                     , zahlengerade
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dpaetzel/zahlengerade
